src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    scrollbar-width: thin;
    scrollbar-color: rgba(0, 204, 255, 1) rgba(21, 28, 36, 0);
  }

  html {
    scroll-behavior: smooth;
    line-height: 1.15;
  }
  #nprogress {
    z-index: 1000;
  }
  body {
    @apply font-open-sans bg-bg min-h-svh;
    margin: 0;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
  }
  main {
    flex-grow: 1;
  }
  h1, h2, h3, h4, h5, h6 {
    @apply font-quicksand bg-pxlgn-gradient text-transparent bg-clip-text font-semibold uppercase;
    line-height: 1.15;
  }
  h1 {
    font-size: min(12vw, 7.5rem);
  }
  h2 {
    font-size: min(10vw, 5rem);
  }
  h3 {
    font-size: min(8vw, 3rem)
  }
  p, ul, ol {
    @apply text-xl text-wh leading-snug opacity-90;
  }
  .menu--close > li {
    @apply max-h-0 md:max-h-none;
  }
  .menu--open > li {
    @apply max-h-12 md:max-h-none delay-0;
  }
  .menu--open > li:nth-child(2) {
    @apply delay-100;
  }
  .menu--open > li:nth-child(3) {
    @apply delay-200;
  }
  .menu--open > li:nth-child(4) {
    @apply delay-300;
  }
  .text-pxlgn {
    @apply bg-pxlgn-gradient text-transparent bg-clip-text font-normal;
  }

  p a:not(.rounded-full) {
    @apply text-pxlgn hover:opacity-60 transition-all duration-300;
  }

  .screen__chalupa {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('/images/pages/chalupanahorach.webp');
    background-size: cover;
    background-position: top;
    animation: scrollChalupa 20s ease-in-out infinite;
    animation-delay: .5s;
  }
  
  .screen__foto {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: top;
    animation-delay: .5s;
  }

  .screen__foto--hruba {
    animation: scrollFoto 20s ease-in-out infinite;
    background-image: url('/images/pages/fotohruba.webp');
  }
  .screen__foto--chalupa {
    animation: scrollChalupa 20s ease-in-out infinite;
    background-image: url('/images/pages/chalupanahorach.webp');
  }

  ::-webkit-resizer {
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 200px 200px;
    border-color: transparent transparent #00CCFF transparent;
  }

  @keyframes scrollChalupa {
    0% {
      background-position: top;
      opacity: 1;
    }
    25% {
      background-position: bottom;
    }
    48% {
      opacity: 1;
    }
    50% {
      background-position: top;
      opacity: 0;
    }
    98% {
      opacity: 0;
    }
    100% {
      background-position: top;
      opacity: 1;
    }
  }
  
  @keyframes scrollFoto {
    50% {
      background-position: top;
    }
    75% {
      background-position: bottom;
    }
    100% {
      background-position: top;
    }
  }

  @utility drag-none {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    user-select: none;
  }

  .shimmer {
    background-image: linear-gradient(
      90deg,
      transparent,
      rgba(255, 255, 255, 0.4),
      transparent
    );
    background-size: 200% 100%;
    animation: shimmer 1.5s infinite;
  }

  @keyframes shimmer {
    100% {
      transform: translateX(100%);
    }
  }
}

/* cookieconsent */
#cc-main {
  color-scheme: dark;
  --cc-font-family: var(--open-sans);
  --cc-bg: linear-gradient(180deg, rgba(21, 28, 36, 40%) 0%, rgba(21, 28, 36, 80%) 100%);
  --cc-modal-border-radius: 1.5rem;
  --cc-btn-border-radius: 1.5rem;
  --cc-secondary-color: white;
  --cc-cookie-category-block-bg: #151c24;
  --cc-btn-secondary-bg: linear-gradient(90deg, #00CCFF 0%, #1CD2E6 57%, #58DEB1 80%, #91E97E 100%);
  --cc-toggle-readonly-bg: linear-gradient(90deg, #00CCFF 0%, #1CD2E6 57%, #58DEB1 80%, #91E97E 100%);
  --cc-btn-secondary-color: #151c24;
  --cc-btn-primary-color: #151c24;
  --cc-btn-primary-bg: linear-gradient(90deg, #00CCFF 0%, #1CD2E6 57%, #58DEB1 80%, #91E97E 100%);
  --cc-toggle-on-bg: linear-gradient(90deg, #00CCFF 0%, #1CD2E6 57%, #58DEB1 80%, #91E97E 100%);
}

#cc-main .pm__section--toggle.is-expanded {
  --cc-cookie-category-block-bg: #151c24!important;
  --cc-cookie-category-block-border: var(--cc-cookie-category-expanded-block-hover-bg);
}

#cc-main .pm--box {
  @apply backdrop-blur-lg;
  border-radius: 3rem !important;
}

#cc-main .cm__body {
  @apply backdrop-blur-lg;
}

#cc-main .pm__header {
  border-bottom: none!important;
}

#cc-main .pm__footer {
  border-top: none!important;
}

#cc-main .pm__body, #cc-main .pm__footer, #cc-main .pm__header {
  padding: 1.5rem!important;
}

#cc-main .cm__btns {
  border-top: none!important;
}

#cc-main .pm__section {
  border: none!important;
}

#cc-main .pm__section--toggle .pm__section-title {
  border: none!important;
} 

#cc-main .cm {
  backdrop-filter: blur(20px);
  box-shadow: none;
}

.cm__btn:not(.cm__btn--secondary) {
  @apply w-full sm:w-auto text-center bg-pxlgn-gradient rounded-3xl relative transition-all duration-300 hover:brightness-50 text-sec px-8 py-4 !important;
}

.cm__btn--secondary, .pm__close-btn, #cc-main .pm__btn--secondary {
  @apply w-full sm:w-auto text-center bg-pxlgn-gradient rounded-3xl relative before:transition-all before:duration-300 before:bg-sec before:absolute before:h-[calc(100%-2px)] before:w-[calc(100%-2px)] before:top-[1px] before:rounded-3xl before:left-[1px] hover:before:bg-transparent border-none p-0 !important;
}

#cc-main .pm__close-btn {
  @apply !w-auto;
}

.cm__btn--secondary:hover span, .pm__close-btn:hover span, #cc-main .pm__btn--secondary:hover span {
  @apply  bg-none text-sec bg-clip-border !important;
}

.cm__btn--secondary span, #cc-main .pm__btn--secondary span {
  @apply bg-pxlgn-gradient transition-all duration-300 text-transparent bg-clip-text px-8 py-4 z-10 relative block !important;
}

.cm__desc {
  @apply !border-b-0;
}

.cm__btns {
  @apply !border-t-0;
}

.cm__title, .pm__title, .pm__section-title {
  @apply font-quicksand bg-pxlgn-gradient text-transparent bg-clip-text font-semibold uppercase !important;
}

#cc-main .pm__section:not(:first-child):hover {
  background: none!important;
}

#cc-main .pm__section--toggle .pm__section-desc-wrapper {
  border: none!important;
}

#cc-main .cc__link, #cc-main a {
  background-repeat: unset!important;
  background-size: unset!important;
  @apply bg-pxlgn-gradient text-transparent bg-clip-text font-normal hover:opacity-60 !important;
}

#cc-main .pm__btn--secondary, #cc-main .pm__btn, #cc-main .pm__btn--secondary {
  border: none!important;
  transition: all .3s ease-in-out;
}

#cc-main .pm__btn:hover:not(.pm__btn--secondary) {
  background: var(--cc-btn-secondary-bg)!important;
  opacity: .75;
  color: var(--cc-btn-secondary-color)!important;
}

.pm__close-btn svg {
  stroke: #00CCFF!important;
}

.pm__close-btn:hover svg {
  stroke: var(--cc-cookie-category-block-bg)!important;
}

#cc-main .pm__badge {
  color: #151c24!important;
}

#cc-main .toggle__icon-on svg {
  stroke: #00ccff!important;
}

#cc-main .pm-overlay {
  backdrop-filter: blur(4px);
}

#cc-main .pm__table-head>tr {
  border: none!important;
  color: var(--cc-secondary-colo)!important;
}

#cc-main .pm__table-tr:hover {
  background: initial;
}

#cc-main .cm__btn--secondary:focus-visible {
  border: none  !important;
}

/* tiptap */

.tiptap {
  @apply focus-visible:outline-none 
}

.tiptap h1,
.tiptap h2,
.tiptap h3,
.tiptap h4,
.tiptap h5,
.tiptap h6 {
  caret-color: #ffffff;
}

#cc-main .pm--flip .pm__btn+.pm__btn, #cc-main .pm--flip .pm__btn-group+.pm__btn-group {
    margin-right: .75rem;
}

#cc-main .pm__table-td:before {
  @apply text-wh;
}

p:empty {
  display: none;
}

